# ZenTrading_mainapp

./: app.py  index.html  pyproject.toml  requirements.txt
static/: script.js
strategy/: golden_strategies.py
